# EmuLauncher

./: README.md  generate-script.py  settings.gradle.kts  source-emulauncher.txt  source-res.txt
app/: build.gradle.kts
app/src/androidTest/java/com/cinemint/emulauncher/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libretro.h  native-lib.cpp
app/src/main/java/com/cinemint/emulauncher/: EmulatorActivity.kt  MainActivity.kt
app/src/main/res/drawable/: round_button_bg.xml
app/src/main/res/layout/: emulator_activity.xml  item_rom.xml  main_activity.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cinemint/emulauncher/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
